k8s/namespaces/media/subgen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subgen
  namespace: media
  labels:
    app.kubernetes.io/name: subgen
spec:
  selector:
    app.kubernetes.io/name: subgen
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  type: ClusterIP
