k8s/namespaces/media/subgen/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: subgen-https
  namespace: media
  labels:
    app.kubernetes.io/name: subgen
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`subgen.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: subgen
          port: 9000
  tls:
    secretName: oglesby-io-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: subgen-http
  namespace: media
  labels:
    app.kubernetes.io/name: subgen
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`subgen.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: subgen
          port: 9000
